tests/baselines/reference/genericFunctionsWithOptionalParameters2.errors.txt
tests/cases/compiler/genericFunctionsWithOptionalParameters2.ts(7,1): error TS2555: Expected at least 1 arguments, but got 0.


==== tests/cases/compiler/genericFunctionsWithOptionalParameters2.ts (1 errors) ====
    interface Utils {
       fold<T, S>(c: Array<T>, folder?: (s: S, t: T) => T, init?: S): T;
    }
    
    var utils: Utils;
    
    utils.fold(); // error
    ~~~~~~~~~~~~
!!! error TS2555: Expected at least 1 arguments, but got 0.
    utils.fold(null); // no error
    utils.fold(null, null); // no error
    utils.fold(null, null, null); // error: Unable to invoke type with no call signatures
    